Fix broken css

--- a/p2/page/css/login.sass
+++ b/p2/page/css/login.sass
@@ -55,7 +55,11 @@ div.login
 					color: #232323
 			@media (prefers-color-scheme: dark) 
 					color: #e6e6e6
-			transition: all 2s ease
+			transition: all .2s ease
+			&[type="text"]
+				width: 10rem
+			&[type="password"]
+				width: 10rem
 			&[type="text"]:hover
 				width: 47%
 			&[type="password"]:hover
@@ -71,6 +75,8 @@ div.login
 					color: #232323
 				@media (prefers-color-scheme: dark) 
 					color: #e6e6e6
+			&[type="submit"]:hover
+				width: 20%
 
 		.username
 			display: flex
